@@ -74,7 +74,8 @@ DONE
 
 ..
     Local variables:
-    mode: rst
     coding: utf-8
+    mode: text
+    mode: rst
     End:
-    vim: filetype=rst fileencoding=utf-8 :
+    vim: fileencoding=utf-8 filetype=rst :
