@@ -2,7 +2,7 @@
 # Project configuration for Pylint static code checker.
 # Manpage: pylint(1)
 
-# Copyright © 2010–2012 Ben Finney <ben+python@benfinney.id.au>
+# Copyright © 2010–2014 Ben Finney <ben+python@benfinney.id.au>
 # This is free software. See the end of this file for information.
 
 [MASTER]
@@ -328,3 +328,10 @@ notes=FIXME,XXX,TODO
 # under the terms of the GNU General Public License as published by the
 # Free Software Foundation; version 3 of that license or any later version.
 # No warranty expressed or implied. See the file LICENSE.GPL-3 for details.
+
+
+# Local variables:
+# coding: utf-8
+# mode: conf
+# End:
+# vim: fileencoding=utf-8 filetype=conf :
