@@ -1,3 +1,8 @@
+2014-05-20  Ben Finney  <ben+python@benfinney.id.au>
+
+    * Update copyright notices.
+    * Add editor hints for most files.
+
 2012-05-30  Ben Finney  <ben+python@benfinney.id.au>
 
     * Use unicode literals by default, specifying bytes where necessary.
@@ -217,3 +222,4 @@ coding: utf-8
 left-margin: 4
 indent-tabs-mode: nil
 End:
+vim: fileencoding=utf-8 filetype=changelog :
